# platformer-project

./: .gitignore  CMakeLists.txt  PlatformerProject.sln  README.md
Engine/: CMakeLists.txt  Engine.vcxproj  dllmain.cpp
Engine/ECS/: CMakeLists.txt  ECS.h  Entity.h  Manager.h  System.h  SystemsQueue.h
Engine/ECS/MPL/: All.hpp  CMakeLists.txt  Concat.hpp  ContainsAll.hpp  Count.hpp  Filter.hpp  IndexOf.hpp  Interface.hpp  MPL.hpp  Map.hpp  Rename.hpp  Repeat.hpp  Tests.hpp  Type.hpp  TypeList.hpp  TypeListOps.hpp  Unique.hpp  Utils.h
Engine/Engine/: Application.cpp  Application.h  Core.h  EngineEntity.h  Enums.h  GUI.cpp  GUI.h  Time.cpp  Time.h  Utils.h  VisibleEntity.h
Engine/Engine/Data/: CMakeLists.txt  Color.h  ResourceRepository.cpp  ResourceRepository.h  TexturesRepository.cpp  TexturesRepository.h
Engine/Engine/Input/: CMakeLists.txt  Input.cpp  Input.h
Engine/Engine/Physics/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  IPhysicsBody.h  Intersection.h  Ray.cpp  Ray.h  Raycaster.cpp  Raycaster.h
Engine/Engine/Rendering/: CMakeLists.txt  IRenderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
Engine/ImGUI/: CMakeLists.txt  imconfig.h
Engine/glad/: CMakeLists.txt
Engine/stb/: CMakeLists.txt
ImGUI/: Header.h  ImGUI.vcxproj  imconfig.h
Platformer/: Application.cpp  Application.h  Bullet.h  CMakeLists.txt  CharacterController.cpp  CharacterController.h  Enemy.cpp  Platformer.cpp  Platformer.h  Platformer.vcxproj  imgui.ini  main.cpp
Platformer/AI/: AIMovementConstants.h  CMakeLists.txt  Enemy.cpp  Enemy.h
Platformer/AI/Navigation/: CMakeLists.txt  Navmesh.cpp  Navmesh.h  NavmeshNode.h
Platformer/Player/: CMakeLists.txt  Player.cpp  Player.h  PlayerMovementConstants.h  PlayerShooting.cpp  PlayerShooting.h
Platformer/UI/: CMakeLists.txt  GameOverWidget.cpp  GameOverWidget.h  PlayerHealthWidget.cpp  PlayerHealthWidget.h
res/: shaderFragment.shader  shaderVertex.shader
res/Shaders/: sprites.fs  sprites.vs
